added error handling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">CITIES QUIZ</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="task_details">Select the location of %s</string>
 </resources>
