--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">CITIES QUIZ</string>
     <string name="task_details">Select the location of %s</string>
-
+    <string name="place">place</string>
 </resources>
